modules/ecs/lb.tf
resource "aws_lb" "equus_lb" {
  name               = "equus-lb"
  subnets            = var.subnet_ids
  load_balancer_type = "application"
  security_groups    = [aws_security_group.lb.id]
}

resource "aws_lb_listener" "http_forward" {
  load_balancer_arn = aws_lb.equus_lb.arn
  port = 80
  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "application/json"
      message_body = "Not Found"
      status_code  = "404"
    }
  }
}

resource "aws_lb_listener_rule" "equus_listener_rule" {
  count = length(var.service_name)
  listener_arn = aws_lb_listener.http_forward.arn
  priority = 50 + count.index
  action {
    type = "forward"
    target_group_arn = aws_lb_target_group.equus_tg[count.index].arn
  }
  condition {
    path_pattern {
      values = var.path_list[element(split("-",var.service_name[count.index]),0)]
    }
  }
}

resource "aws_lb_target_group" "equus_tg" {
  count = length(var.service_name)
  name        = "${var.service_name[count.index]}-tg"
  port        = 8080
  protocol    = "HTTP"
  vpc_id      = var.vpc_id
  target_type = "ip"

  health_check {
    enabled             = true
    interval            = 300
    path                = "/"
    timeout             = 60
    matcher             = "200"
    healthy_threshold   = 5
    unhealthy_threshold = 5
  }

  lifecycle {
    create_before_destroy = true
  }
}
